--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "androidnote",
-    "title": "Android Note",
+    "name": "njgdg",
+    "title": "南京谷歌开发者社区",
     "version": "1.0.0",
     "homepage": "http://njgdg.github.io",
     "author": "z8888q",
