--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ baseurl: ""                             # for example, '/blog' if your blog host
 
 # SNS settings
 RSS: true
-# weibo_username:     njgdg
+weibo_username:       2627645705
 # zhihu_username:     njgdg
-github_username:    njgdg
-#twitter_username:  njgdg
+github_username:      njgdg
+#twitter_username:    njgdg
 # facebook_username:  njgdg
 
 
@@ -55,7 +55,7 @@ duoshuo_share: true                     # set to false if you want to use Commen
 # ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 # Google Analytics
 ga_track_id: 'UA-70705676-1'            # Format: UA-xxxxxx-xx
-ga_domain: androidnote.njgdg.org
+ga_domain: njgdg.org
 
 
 
