--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 南京谷歌开发者社区
 header-img: img/home-bg.jpg
 email: nanjinggdg@gmail.com
 description: "南京谷歌开发者社区 | "
-keyword: "谷歌,谷歌开发者,开发者社区,安卓,南京, android, note, 南京GDG, GDG, 谷歌开发者社区, 南京谷歌开发者社区"
+keyword: "南京GDG, GDG, 南京谷歌开发者社区, 谷歌开发者社区, 谷歌, 谷歌开发者, 开发者社区, 安卓, 南京, android"
 url: ""     #http://gdgnanjing.com         # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
